--- a/css/screen.css
+++ b/css/screen.css
@@ -43,12 +43,21 @@
     --global-color-neutral-900: #35374d;
     --global-color-neutral-950: #20223a;
 
+    /* backgroud colors */
+    --global-input-backgroundColor: White;
+    --global-input-color: var(--global-color-neutral-950);
+    --global-input-borderColor: var(--global-color-neutral-100);
+    --global-input-hover-borderColor: var(--global-color-neutral-200);
+    --global-input-focus-borderColor: var(--global-color-neutral-500);
+    --global-input-focus-boxShadow: 0 0 0 3px var(--global-color-primary-500-alpha-30);
+
     /* border stuff */
     --global-borderRadius: 3px;
     --global-borderWidth: 1px;
 
     /* transitions */
     --global-transitionTiming-alpha: .1s ease-out;
+    --global-input-transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
 
     /* Baseline settings */
     --global-baseline: .5rem;
@@ -67,6 +76,12 @@
     /*  = 48px */
     --global-whitespace-xxl: calc(var(--global-whitespace) * 3);
     /*  = 72px */
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --global-input-backgroundColor: var()
+    }
 }
 
 /*---------------------------------------/*
@@ -556,25 +571,30 @@ input::placeholder {
     -moz-appearance: none;
     appearance: none;
     width: 100%;
-    border: var(--global-borderWidth) solid var(--global-color-neutral-100);
+    /* border: var(--global-borderWidth) solid var(--global-color-neutral-100); */
     border-radius: var(--global-borderRadius);
-    color: var(--global-color-neutral-950);
-    background-color: White;
+    /* color: var(--global-color-neutral-950); */
+    /* background-color: White; */
     font-family: inherit;
     font-size: 1rem;
     line-height: calc(var(--global-baseline) * 3);
     padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
     outline: none;
     transition: border var(--global-transition-timing-alpha);
+    
+    border: var(--global-borderWidth) solid var(--global-input-borderColor);
+    background-color: var(--global-input-backgroundColor);
+    color: var(--global-input-color);
 
     &:hover {
-        border-color: var(--global-color-neutral-200);
+        border-color: var(--global-input-hover-borderColor);
     }
 
     &:focus,
     &:active {
-        border-color: var(--global-color-primary-500);
-        box-shadow: 0 0 0 3px var(--global-color-primary-500-alpha-30);
+        border-color: var(--global-input-focus-borderColor);
+        /* box-shadow: 0 0 0 3px var(--global-color-primary-500-alpha-30); */
+        box-shadow: var(--global-input-focus-boxShadow);
     }
 }
 
@@ -634,6 +654,189 @@ input::placeholder {
         box-shadow: none;
     }
 }
+
+/* custom inputs */
+.c-option--hidden:checked + .c-custom-option .c-custom-option__symbol {
+    /* background-color: hotpink; */
+    opacity: 1;
+    transform: scale(1);
+    transition: var(--global-input-transition);
+}
+
+.c-option--hidden:focus-visible + .c-custom-option .c-custom-option__fake-input {
+    /* background-color: hotpink; */
+    border-color: var(--global-input-focus-borderColor);
+    /* box-shadow: 0 0 0 3px var(--global-color-primary-500-alpha-30); */
+    box-shadow: var(--global-input-focus-boxShadow);
+}
+
+.c-custom-option {
+    display: flex;
+}
+
+.c-custom-option__symbol {
+    opacity: 0;
+    transform: scale(0);
+    transition: var(--global-input-transition);
+}
+
+
+.c-custom-option__fake-input {
+    display: flex;
+    width: 1rem;
+    height: 1rem;
+    border: solid var(--global-borderWidth) var(--global-input-borderColor);
+    margin-right: 0.5rem;
+
+    justify-content: center;
+    align-items: center;
+
+    /* .--checkbox {
+        border-radius: var(--global-borderRadius);
+    }
+
+    & .--radio {
+        border-radius: 100%;
+        background-color: hotpink;
+    } */
+}
+
+.c-custom-option__fake-input--checkbox {
+    border-radius: var(--global-borderRadius);
+
+    &:hover {
+        border: solid var(--global-borderWidth) var(--global-input-hover-borderColor);
+    }
+
+    &:focus {
+        border: solid var(--global-borderWidth) var(--global-input-focus-borderColor);
+    }
+}
+
+.c-custom-option__fake-input--radio {
+    border-radius: 100%;
+}
+
+.c-custom-option__fake-input--checkbox .c-custom-option__symbol {
+    /* Stuff for the checkbox icon... */
+    width: 10px;
+    height: 10px;
+    fill: var(--global-color-primary-500-alpha-75);
+  }
+  
+  .c-custom-option__fake-input--radio .c-custom-option__symbol {
+    /* Stuff for the radio button icon... */
+    width: 6px;
+    height: 6px;
+    background-color: var(--global-color-primary-500-alpha-75);
+    border-radius: 100%;
+  }
+
+  .c-option-list {
+    margin-bottom: 1.5rem;
+  }
+
+  .c-option-list__item {
+    margin-bottom: .75rem;
+  }
+
+  .c-custom-toggle {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .c-custom-toggle__fake-input {
+    display: block;
+    width: 3rem;
+    height: 1.5rem;
+    background-color: var(--global-color-neutral-050);
+    border-radius: 3rem;
+    border: solid var(--global-input-borderColor) var(--global-borderWidth);
+
+    &::after {
+        display: block;
+        content: "";
+        border-radius: 100%;
+        width: 1.375rem;
+        height: 1.375rem;
+        background-color: white;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, .16);
+
+        transition: all var(--global-transitionTiming-alpha);
+    }
+  }
+  .c-option--hidden:checked + .c-custom-toggle {
+    .c-custom-toggle__fake-input::after {
+        transform: translateX(1.5rem);
+    }
+    .c-custom-toggle__fake-input {
+        background-color: #3385FF;
+        border-color: #2E77E6;
+    }
+}
+
+.c-option--hidden:focus-visible + .c-custom-toggle {
+    .c-custom-toggle__fake-input {
+    background-color: hotpink;
+    border-color: var(--global-input-focus-borderColor);
+    box-shadow: var(--global-input-focus-boxShadow);
+} 
+}
+
+.c-custom-select {
+    display: block;
+    position: relative;
+}
+
+.c-custom-select__symbol {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: var(--global-color-neutral-300);
+    position: absolute;
+    top: .75rem;
+    right: .75rem;
+    pointer-events: none;
+}
+
+/* PASSWORD */
+
+.c-password-toggle__symbol {
+    width: 1.25rem;
+    height: 1.25rem;
+    fill: var(--global-color-neutral-300);
+}
+
+.c-password-toggle-container {
+    display: block;
+    position: relative;
+}
+
+.c-password-toggle {
+    position: absolute;
+    top: .875rem;
+    right: .875 rem;
+}
+
+.c-password-toggle__symbol--show {
+    display: block;
+}
+
+.c-password-toggle__symbol--hide {
+    display: none;
+}
+
+.c-password-toggle__checkbox:checked + .c-password-toggle__label {
+    .c-password-toggle__symbol--show {
+        display: none;
+    }
+    
+    .c-password-toggle__symbol--hide {
+        display: block;
+    }
+}
+
 
 /*------------------------------------*\
 #UTILITIES
